--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,6 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testDB
+spring.datasource.url=jdbc:h2:mem:testDB;MODE=MYSQL;DATABASE_TO_LOWER=TRUE
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL55Dialect
+spring.jpa.properties.hibernate.dialect.storage_engine=innodb
