--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:testDB;MODE=MYSQL;DATABASE_TO_LOWER=TRUE
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL55Dialect
 spring.jpa.properties.hibernate.dialect.storage_engine=innodb
+
+# springboot 2.5.x부터는 data.sql은 하이버네이트의 초기화 시점 이전에 수행된다. 따라서 테이블이 생성되지 않았기 때문에 오류 발생
+# 이 설정을 추가해주는 것으로 data.sql은 하이버네이트의 초기화 수 수행된다.
+spring.jpa.defer-datasource-initialization=true
