FIX: 테스트와 운영 환경 profile 분리
테스트시에도 data.sql스크립트가 수행되어 계획했던 테스트가 이루어지지 않아 profile을 분리하는 것으로 테스트 환경에서는 .sql스크립트가 수행되지 않도록 변경.
@ActiveProfiles()어노테이션을 테스트 클래스에 적용해주어 application-test.properties가 적용되도록 변경

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -11,3 +11,5 @@ spring.jpa.properties.hibernate.dialect.storage_engine=innodb
 # springboot 2.5.x부터는 data.sql은 하이버네이트의 초기화 시점 이전에 수행된다. 따라서 테이블이 생성되지 않았기 때문에 오류 발생
 # 이 설정을 추가해주는 것으로 data.sql은 하이버네이트의 초기화 후 수행된다.
 spring.jpa.defer-datasource-initialization=true
+
+spring.sql.init.mode=never
