FEAT: 이미지 파일을 실제 저장소에 저장하는 기능과 DB에 파일 정보를 저장하는 기능 작성
application-test.properties, application.properties: 파일을 저장할 경로 작성, 저장할 수 있는 파일의 최대 사이즈 50MB로 수정

* 추후 저장할 수 있는 파일의 최대 사이즈는 적절한 사이즈로 다시 조정할 예정

ImagesService: 이미지 파일의 정보를 DB에 저장하는 기능을 제공한다.

FileUploadService: 이미지 파일을 실제 지정한 경로에 저장하는 기능을 제공한다.

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -13,3 +13,7 @@ spring.jpa.properties.hibernate.dialect.storage_engine=innodb
 spring.jpa.defer-datasource-initialization=true
 
 spring.sql.init.mode=never
+
+
+# 테스트용 파일 저장 경로
+file.store.path="C:\\Users\\CMG16\\Desktop\\coding\\images"
