--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -16,4 +16,4 @@ spring.sql.init.mode=never
 
 
 # 테스트용 파일 저장 경로
-file.store.path="C:\\Users\\CMG16\\Desktop\\coding\\images"
+file.store.path=C:\\Users\\CMG16\\Desktop\\coding\\images
