FEAT: 네이버 OAuth2 로그인 적용
build.gradle:
 - 스프링 시큐리티, 스프링 oauth2-client 의존성 추가

application.properties:
 - 미리 정의되어 있지 않은 provider의 OAuth2 로그인을 구현하는 것이기 때문에 추가적인 정보를 입력해 두어야 한다.
 - client_id, client_secret, client_name, authorization_grant_type, redirect_uri 등

SecurityConfig: 스프링 시큐리티를 사용하기 위한 설정
 - oauth2 로그인을 할 것이기 때문에 formLogin은 사용하지 않음
 - 아직은 접근 권한에 대해 세부적으로 적용하지 않고 oauth2 로그인과 h2-console에 접근하는 것만 빼고는 모두 권한을 체크하도록 설정
 - oauth2로그인이 완료되고 provider로부터 받은 유저 정보를 처리하는 클래스 CustomOAuth2UserService를 userService로 넘겨준다

CustomOAuth2User: CustomOAuth2UserService의 loadUser()메소드가 반환할 클래스
 - OAuth2 로그인에 사용할 때는 OAuth2User, 일반로그인 시는 UserDetail을 구현해야 하지만, 일반 로그인 방식은 사용하지 않기 때문에 OAuth2User만 구현

OAuth2UserInfo: provider에 종속되지 않게 로그인에 필요한 정보들을 가공하여 전달하기 위한 일종의 dto역할
 - Member 엔티티에 저장할 정보들과 attributes를 필드로 가진다.
 - 정적 팩토리 메소드 of() 로 객체를 생성하며 provider에 따라 다른 파싱 방법을 사용해 객체를 생성한다. (ofNaver, ofGoogle, ...)

CustomOAuth2UserService: provider로부터 전달받은 정보들로 회원가입 또는, 로그인 처리를 한다.
 - loadUser() 메소드는 전달받은 userRequest로부터 사용자 정보를 분리하여 회원가입 처리를 하고 CustomOAuth2User를 반환한다.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,15 @@ file.store.path=C:\\Users\\CMG16\\Desktop\\coding\\images
 
 spring.servlet.multipart.maxFileSize=50MB
 spring.servlet.multipart.maxRequestSize=50MB
+
+# oauth2 로그인 설정
+spring.security.oauth2.client.registration.naver.clientId=VLcFiA25uf_jqtqU4k9l
+spring.security.oauth2.client.registration.naver.clientSecret=TQchqnuy4N
+spring.security.oauth2.client.registration.naver.clientName=Naver
+spring.security.oauth2.client.registration.naver.authorizationGrantType= authorization_code
+spring.security.oauth2.client.registration.naver.redirectUri= http://localhost:8080/login/oauth2/code/naver
+
+spring.security.oauth2.client.provider.naver.authorizationUri= https://nid.naver.com/oauth2.0/authorize
+spring.security.oauth2.client.provider.naver.tokenUri= https://nid.naver.com/oauth2.0/token
+spring.security.oauth2.client.provider.naver.userInfoUri= https://openapi.naver.com/v1/nid/me
+spring.security.oauth2.client.provider.naver.userNameAttribute=response
